--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,9 +41,8 @@ jobs:
           java-version: '21'
       - name: Build
         run: |
-          mvn --show-version org.apache.maven.plugins:maven-wrapper-plugin:3.3.1:wrapper "-Dmaven=3.9.6"
-          ./mvnw dependency:resolve dependency:resolve-plugins --show-version
-          ./mvnw install --errors --batch-mode
+          mvn --show-version org.apache.maven.plugins:maven-wrapper-plugin:3.3.1:wrapper "-Dmaven=4.0.0-alpha-13"
+          ./mvnw install --errors --batch-mode --show-version
       - name: Remove Snapshots Before Caching
         run: find /home/runner/work/fusion/fusion/.m2 -name '*SNAPSHOT' | xargs rm -Rf
   security_audit:
