[build] Upgrade to Bundlebee 1.0.28

--- a/app-deployment/bundlebee/descriptions.properties
+++ b/app-deployment/bundlebee/descriptions.properties
@@ -44,6 +44,10 @@ prometheus-simple.resources.limits.cpu = The resource limits cpu for Prometheus.
 prometheus-simple.resources.limits.memory = The resource limits memory for Prometheus.
 prometheus-simple.resources.requests.cpu = The resource requests cpu for Prometheus.
 prometheus-simple.resources.requests.memory = The resource requests memory for Prometheus.
+prometheus-simple.evaluation_interval = The evaluation interval for Prometheus.
+prometheus-simple.internal = The internal for Prometheus.
+prometheus-simple.scrape_internal = The scrape internal  for Prometheus.
+prometheus-simple.serviceaccount = The service account used for Prometheus.
 zipkin-simple.storageType = The storage type, by default it uses `mem` storage (in memory).
 zipkin-simple.image = The image to use for Zipkin.
 zipkin-simple.resources.limits.cpu = The resource limits cpu for Zipkin.
