--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,14 @@
         <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <fusion.version>1.0.21</fusion.version>
+        <fusion.version>1.0.22</fusion.version>
 
         <yupiik-logging.version>1.0.8</yupiik-logging.version>
-        <tomcat.version>10.1.30</tomcat.version>
-        <junit-jupiter.version>5.11.0-M1</junit-jupiter.version>
+        <tomcat.version>10.1.34</tomcat.version>
+        <junit-jupiter.version>5.11.4</junit-jupiter.version>
         <h2.version>2.3.232</h2.version>
 
-        <yupiik.tools.version>1.2.3</yupiik.tools.version>
+        <yupiik.tools.version>1.2.5</yupiik.tools.version>
         <yupiik.bundlebee.version>1.0.28</yupiik.bundlebee.version>
     </properties>
 
