--- a/app-backend/pom.xml
+++ b/app-backend/pom.xml
@@ -183,6 +183,26 @@
                             <key>java.util.logging.manager</key>
                             <value>io.yupiik.logging.jul.YupiikLogManager</value>
                         </property>
+                        <property>
+                            <key>backend.headers.length</key>
+                            <value>1</value>
+                        </property>
+                        <property>
+                            <key>backend.headers.0.key</key>
+                            <value>X-My</value>
+                        </property>
+                        <property>
+                            <key>backend.headers.0.value</key>
+                            <value>tata</value>
+                        </property>
+                        <property>
+                            <key>fusion.http-server.port</key>
+                            <value>8888</value>
+                        </property>
+                        <property>
+                            <key>fusion.observability.server.port</key>
+                            <value>9999</value>
+                        </property>
                     </systemProperties>
                 </configuration>
             </plugin>
@@ -262,6 +282,57 @@
                         </permissions>
                     </extraDirectories>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.6.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>io.yupiik.maven</groupId>
+                        <artifactId>maven-shade-transformers</artifactId>
+                        <version>0.0.5</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>fat</shadedClassifierName>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <dependencyReducedPomLocation>${project.build.directory}/reduced-pom.xml</dependencyReducedPomLocation>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>io.yupiik.fusion.framework.api.main.Launcher</mainClass>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                                <transformer implementation="io.yupiik.maven.shade.transformer.FusionDocumentationTransformer" />
+                                <transformer implementation="io.yupiik.maven.shade.transformer.FusionJsonSchemaTransformer" />
+                                <transformer implementation="io.yupiik.maven.shade.transformer.FusionOpenRPCTransformer" />
+                            </transformers>
+                            <filters>
+                                <filter> <!-- optional but generally saner -->
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>module-info.class</exclude>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                        <exclude>META-INF/LICENSE.txt</exclude>
+                                        <exclude>META-INF/LICENSE</exclude>
+                                        <exclude>META-INF/NOTICE.txt</exclude>
+                                        <exclude>META-INF/NOTICE</exclude>
+                                        <exclude>META-INF/MANIFEST.MF</exclude>
+                                        <exclude>META-INF/DEPENDENCIES</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
