--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,18 +24,18 @@ env:
 jobs:
   build:
     name: Main Build
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Clone
-        uses: actions/checkout@v4.1.1
+        uses: actions/checkout@v4
       - name: Cache Maven Repository
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: |
             /home/runner/work/fusion/fusion/.m2
           key: m2_repository
       - name: Set up JDK
-        uses: actions/setup-java@v4.2.1
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '21'
@@ -47,17 +47,17 @@ jobs:
         run: find /home/runner/work/fusion/fusion/.m2 -name '*SNAPSHOT' | xargs rm -Rf
   security_audit:
     name: Security Audit
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Clone
-        uses: actions/checkout@v4.1.1
+        uses: actions/checkout@v4
       - name: Cache Maven Repository
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         with:
           path: /home/runner/work/fusion-examples/fusion-examples/.m2
           key: m2_repository
       - name: Set up JDK
-        uses: actions/setup-java@v4.2.1
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '21'
